--- a/react-app/Dockerfile
+++ b/react-app/Dockerfile
@@ -10,3 +10,7 @@ COPY package.json .
 
 # o package-lock.json garante a integridade da aplicação
 COPY package-lock.json .
+
+# faz a instalação do app do node
+# RUN sempre roda a linha de comando ao inicializar o container
+RUN npm install
